crates/swc_ecma_parser/tests/flow/type_guards/invalid/missing_type.js
type T = (x: any) => x is;
